@@ -84,6 +84,7 @@ ocamltest_unix_impl="dummy"
 unix_library=""
 unix_directory=""
 bindir_to_libdir=''
+relocatable=no
 
 # Information about the package
 
@@ -257,6 +258,7 @@ AC_SUBST([ocaml_libdir])
 AC_SUBST([QS])
 AC_SUBST([ar_supports_response_files])
 AC_SUBST([bindir_to_libdir])
+AC_SUBST([relocatable])
 
 ## Generated files
 
@@ -1169,6 +1171,7 @@ AS_CASE([$host],
   [AC_CHECK_HEADERS([unistd.h],[AC_DEFINE([HAS_UNISTD], [1])])])
 
 AC_CHECK_HEADER([math.h])
+AC_CHECK_HEADERS([unistd.h],[AC_DEFINE([HAS_UNISTD])])
 AC_CHECK_HEADER([pthread_np.h],[AC_DEFINE([HAS_PTHREAD_NP_H], [1])])
 AC_CHECK_HEADER([dirent.h], [AC_DEFINE([HAS_DIRENT], [1])], [],
   [#include <sys/types.h>])
@@ -2645,6 +2648,7 @@ AS_IF([test x"$mandir" = x'${datarootdir}/man'],
   [mandir='${prefix}/man'])
 
 AS_IF([test x"$enable_relative" = "xyes"],[
+  relocatable=yes
   OCAML_COMPUTE_BINDIR_TO_LIBDIR([bindir],[libdir],[bindir_to_libdir])
   dnl Tests for the OCAML_COMPUTE_BINDIR_TO_LIBDIR macro
   dnl OCAML_COMPUTE_BINDIR_TO_LIBDIR_TESTS
