@@ -76,3 +76,7 @@ val process_deferred_actions :
 *)
 val parse_arguments : ?current:(int ref)
       -> string array ref -> Arg.anon_fun -> string -> unit
+
+(** Adds caml_standard_library_default to {!Clflags.global_string_constants}
+    if it isn't already present. *)
+val set_caml_standard_library_default: unit -> unit
