@@ -40,6 +40,7 @@
 #include "caml/signals.h"
 #include "caml/intext.h"
 #include "caml/startup.h"
+#include "caml/sys.h"
 
 #include "build_config.h"
 
@@ -88,7 +89,7 @@ CAMLexport char_os * caml_get_stdlib_location(void)
   char_os * stdlib;
   stdlib = caml_secure_getenv(T("OCAMLLIB"));
   if (stdlib == NULL) stdlib = caml_secure_getenv(T("CAMLLIB"));
-  if (stdlib == NULL) stdlib = OCAML_STDLIB_DIR;
+  if (stdlib == NULL) stdlib = caml_standard_library;
   return stdlib;
 }
 
